Added a logout.
